passed alll edits

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <main id="main">
         <header id="title">This tribute is dedicated to my son Damian</header>
         <div id="img-div">
-<img src="img/damianAndFriends.jpg">
+<img id="image" src="https://images.unsplash.com/photo-1571632456112-fe373d9a7dd8?ixlib=rb-1.2.1&q=85&fm=jpg&crop=entropy&cs=srgb&ixid=eyJhcHBfaWQiOjE0NTg5fQ">
 <p id="img-caption">Saturady morning with his cousins at the soccer field.</p>
         </div>
         <div id="tribute-info">
             <h1>Damian Pelayo</h1>
             <p>Born November 14th 2010 this young man has had many accomplishments at only the age of 8.</p>
-            <a href="https://www.instagram.com/technstuff_/" target="_blank">Visit his profile!</a> 
+            <a id="tribute-link" href="https://www.instagram.com/technstuff_/" target="_blank">Visit his profile!</a> 
 
         </div>
         <footer>
