--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <main id="main">
         <header id="title">This tribute is dedicated to my son Damian</header>
         <div id="img-div">
-<img id="image" src="https://images.unsplash.com/photo-1571632456112-fe373d9a7dd8?ixlib=rb-1.2.1&q=85&fm=jpg&crop=entropy&cs=srgb&ixid=eyJhcHBfaWQiOjE0NTg5fQ">
+<img id="image" src="img/damianAndFriends.jpg">
 <p id="img-caption">Saturady morning with his cousins at the soccer field.</p>
         </div>
         <div id="tribute-info">
